--- a/index.html
+++ b/index.html
@@ -39,36 +39,17 @@
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
         <h1 class="logo">
-          <a href="index.html"><img src="assets/img/Dhira.svg" alt="" /></a>
+          <a href="index.html"><img class="logo-mobile" src="assets/img/Dhira.svg" alt="" /></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
         <nav id="navbar" class="navbar">
-          <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#work">Work</a></li>
-            <!-- <li class="dropdown">
-              <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-              <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="dropdown">
-                  <a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-              </ul>
-            </li> -->
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <ul class="">
+            <li><a class="nav-link scrollto active justify-content-center" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto justify-content-center" href="#about">About</a></li>
+            <li><a class="nav-link scrollto justify-content-center" href="#work">Portfolio</a></li>
+            <li><a class="nav-link scrollto justify-content-center" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -83,10 +64,8 @@
       <div class="hero-content display-table">
         <div class="table-cell">
           <div class="container">
-            <!--<p class="display-6 color-d">Hello, world!</p>-->
             <h1 class="hero-title mb-4 fw-bold">I'm <span class="gradient-text">Dhira Danuarta</span></h1>
             <p class="hero-subtitle"><span class="typed" data-typed-items="Freelancer, Web Designer, UI Designer"></span></p>
-            <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
           </div>
         </div>
       </div>
