--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <ul class="">
             <li><a class="nav-link scrollto active justify-content-center" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto justify-content-center" href="#about">About</a></li>
+            <li><a class="nav-link scrollto justify-content-center" href="#services">Services</a></li>
             <li><a class="nav-link scrollto justify-content-center" href="#work">Portfolio</a></li>
             <li><a class="nav-link scrollto justify-content-center" href="#contact">Contact</a></li>
           </ul>
@@ -77,7 +78,7 @@
       <section id="about" class="about-mf sect-pt4 route sect-pb4">
         <div class="container">
           <div>
-            <h6 class="about-tag"><span class="tag-bg"> ABOUT ME</span></h6>
+            <h6 class="tag"><span class="tag-bg"> ABOUT ME</span></h6>
           </div>
           <div class="row">
             <div class="col-md-6">
@@ -89,7 +90,7 @@
               <p class="about-p">
                 My name is Dhira, I'm a student at <a class="link" href="universitasbumigora.ac.id">Universitas Bumigora</a> and now I'm currently on fourth semeester majoring Software Engineering. I live in Mataram, Lombok, Nusa Tenggara
                 Barat, Indonesia. <br /><br />
-                I love to create stunning UI design and I like to do design exploration to improve my design skills. You can check my design on <a class="link" href="https://dribbble.com/DhiraDanuarta" target="_blank">Dribbble</a> or on
+                I love to create stunning UI design and I like to do design exploration to improve my design skills. You can check my design on <a class="link" href="https://dribbble.com/DhiraDanuarta" target="_blank">Dribbble</a> or
                 <a class="link" href="https://instagram.com/ui.dhira" target="_blank">Instagram</a> <br />
                 <br />
                 So, why Software Engineering? Because, when I was graduated from Highschool, I wanted to be Web Developer so that's why I choose Software Engineering. But now I want to be UI Designer or Front-end Web Developer (yea, still
@@ -102,14 +103,14 @@
       <!-- End About Section -->
 
       <!-- ======= Services Section ======= -->
-      <!-- <section id="services" class="services-mf sect-pt4 route">
+      <section id="services" class="services-mf sect-pt4 route">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
               <div class="title-box text-center">
-                <h3 class="title-a">Services</h3>
-                <p class="subtitle-a">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <div class="line-mf"></div>
+                <h6 class="tag"><span class="tag-bg">SERVICES</span></h6>
+                <h3 class="title-a">What I can do to help you</h3>
+                <p class="about-p">These are my services</p>
               </div>
             </div>
           </div>
@@ -117,37 +118,37 @@
             <div class="col-md-4">
               <div class="service-box">
                 <div class="service-ico">
-                  <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+                  <span class="ico-circle"><i class="bi bi-person-square"></i></span>
+                </div>
+                <div class="service-content">
+                  <h2 class="s-title">UI/UX Design</h2>
+                  <p class="s-description text-center">I can do UI/UX design to improve your app or website. I use Figma to create UI/UX design</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-box">
+                <div class="service-ico">
+                  <span class="ico-circle"><i class="bi bi-globe2"></i></span>
                 </div>
                 <div class="service-content">
                   <h2 class="s-title">Web Design</h2>
-                  <p class="s-description text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.</p>
+                  <p class="s-description text-center">I can do web design based on UI design. I create web design with HTML, CSS, Bootstrap or Tailwind</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
                 <div class="service-ico">
-                  <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+                  <span class="ico-circle"><i class="bi bi-bounding-box"></i></span>
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">Web Development</h2>
-                  <p class="s-description text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.</p>
+                  <h2 class="s-title">Graphic Design</h2>
+                  <p class="s-description text-center">I can do graphic design especially in digital. I create graphic design with Figma or Adobe Illustrator</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="service-box">
-                <div class="service-ico">
-                  <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
-                </div>
-                <div class="service-content">
-                  <h2 class="s-title">Photography</h2>
-                  <p class="s-description text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="service-box">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
@@ -158,7 +159,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="service-box">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
@@ -169,7 +170,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="service-box">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
@@ -179,14 +180,14 @@
                   <p class="s-description text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- End Services Section -->
 
       <!-- ======= Counter Section ======= -->
-      <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+      <!-- <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
         <div class="overlay-mf"></div>
         <div class="container position-relative">
           <div class="row">
@@ -236,25 +237,25 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- End Counter Section -->
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="work" class="portfolio-mf sect-pt4 route">
+      <section id="work" class="portfolio-mf sect-pt4 sect-pb4 route">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
               <div class="title-box text-center">
+                <h6 class="tag"><span class="tag-bg">PORTFOLIOS</span></h6>
                 <h3 class="title-a">Portfolio</h3>
-                <p class="subtitle-a">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <div class="line-mf"></div>
+                <p class="about-p">These are my portfolios</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="https://dribbble.com/shots/17657798-Petto-Pet-Adoption-Center-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-1.jpg" alt="" class="img-fluid" />
                   </div>
@@ -262,12 +263,12 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Lorem impsum dolor</h2>
-                      <div class="w-more"><span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span></div>
+                      <h2 class="w-title">Petto - Landing Page</h2>
+                      <div class="w-more"><span class="w-ctegory">UI Design Exploration</span></div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://dribbble.com/shots/17657798-Petto-Pet-Adoption-Center-Landing-Page" target="_blank"> <span class="bi bi-dribbble"></span></a>
                       </div>
                     </div>
                   </div>
@@ -276,20 +277,20 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="https://dribbble.com/shots/18081287-Crafts-Design-Agency-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
-                    <img src="assets/img/work-2.jpg" alt="" class="img-fluid" />
+                    <img src="assets/img/work-2.png" alt="" class="img-fluid" />
                   </div>
                 </a>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Loreda Cuno Nere</h2>
-                      <div class="w-more"><span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span></div>
+                      <h2 class="w-title">Crafts - Landing Page</h2>
+                      <div class="w-more"><span class="w-ctegory">UI Design Exploration</span></div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://dribbble.com/shots/18081287-Crafts-Design-Agency-Landing-Page" target="_blank"> <span class="bi bi-dribbble"></span></a>
                       </div>
                     </div>
                   </div>
@@ -298,7 +299,7 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="https://dribbble.com/shots/17828614-Furnitr-Furniture-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-3.jpg" alt="" class="img-fluid" />
                   </div>
@@ -306,19 +307,19 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Mavrito Lana Dere</h2>
-                      <div class="w-more"><span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span></div>
+                      <h2 class="w-title">Furnitr. - Landing Page</h2>
+                      <div class="w-more"><span class="w-ctegory">UI Design Exploration</span></div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                        <a href="https://dribbble.com/shots/17828614-Furnitr-Furniture-Landing-Page" target="_blank"> <span class="bi bi-dribbble"></span></a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="work-box">
                 <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
@@ -383,14 +384,14 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
       <!-- End Portfolio Section -->
 
       <!-- ======= Testimonials Section ======= -->
-      <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+      <div class="testimonials paralax-mf bg-image">
         <div class="overlay-mf"></div>
         <div class="container">
           <div class="row">
@@ -401,10 +402,10 @@
                     <div class="testimonial-box">
                       <div class="author-test">
                         <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a" />
-                        <span class="author">Xavi Alonso</span>
+                        <span class="author">Arihd Atraunad</span>
                       </div>
                       <div class="content-test">
-                        <p class="description lead">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="description lead">Sangat ramah, baik dan mengerti apa yang saya mau. bintang 5</p>
                       </div>
                     </div>
                   </div>
@@ -414,10 +415,10 @@
                     <div class="testimonial-box">
                       <div class="author-test">
                         <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a" />
-                        <span class="author">Marta Socrate</span>
+                        <span class="author">Gnamok</span>
                       </div>
                       <div class="content-test">
-                        <p class="description lead">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="description lead">Sangat ramah. Bintang 5. Kalo ga percaya yauda</p>
                       </div>
                     </div>
                   </div>
@@ -436,7 +437,7 @@
       <!-- End Testimonials Section -->
 
       <!-- ======= Blog Section ======= -->
-      <section id="blog" class="blog-mf sect-pt4 route">
+      <!-- <section id="blog" class="blog-mf sect-pt4 route">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
@@ -525,12 +526,11 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog Section -->
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
-        <div class="overlay-mf"></div>
+      <section id="contact" class="paralax-mf footer-paralax bg-image route">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
@@ -539,7 +539,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="title-box-2">
-                        <h5 class="title-left">Send Message Us</h5>
+                        <h5 class="title-left">Let's Discuss</h5>
                       </div>
                       <div>
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -581,35 +581,22 @@
                         <h5 class="title-left">Get in Touch</h5>
                       </div>
                       <div class="more-info">
-                        <p class="lead">
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem expedita aperiam aliquid at. Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis mollitia
-                          inventore?
-                        </p>
-                        <ul class="list-ico">
-                          <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                          <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                          <li><span class="bi bi-envelope"></span> contact@example.com</li>
-                        </ul>
+                        <p class="about-p">Let's connect! You can check my social media below</p>
                       </div>
                       <div class="socials">
                         <ul>
                           <li>
-                            <a href=""
-                              ><span class="ico-circle"><i class="bi bi-facebook"></i></span
+                            <a href="https://dribbble.com/DhiraDanuarta" target="_blank"
+                              ><span class="ico-circle"><i class="bi bi-dribbble"></i></span
                             ></a>
                           </li>
                           <li>
-                            <a href=""
+                            <a href="https://instagram.com/ui.dhira" target="_blank"
                               ><span class="ico-circle"><i class="bi bi-instagram"></i></span
                             ></a>
                           </li>
                           <li>
-                            <a href=""
-                              ><span class="ico-circle"><i class="bi bi-twitter"></i></span
-                            ></a>
-                          </li>
-                          <li>
-                            <a href=""
+                            <a href="https://www.linkedin.com/in/i-komang-dhira-d-10325a232/" target="_blank"
                               ><span class="ico-circle"><i class="bi bi-linkedin"></i></span
                             ></a>
                           </li>
@@ -628,7 +615,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer>
+    <footer class="sect-mt4">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
