memperbaiki gambar portfolio

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </div>
             <div class="col-md-6 about-p-center">
               <p class="about-p">
-                My name is Dhira, I'm a student at <a class="link" href="universitasbumigora.ac.id">Universitas Bumigora</a> and now I'm currently on fourth semeester majoring Software Engineering. I live in Mataram, Lombok, Nusa Tenggara
-                Barat, Indonesia. <br /><br />
+                My name is Dhira, I'm a student at <a class="link" href="https://universitasbumigora.ac.id">Universitas Bumigora</a> and now I'm currently on fourth semeester majoring Software Engineering. I live in Mataram, Lombok, Nusa
+                Tenggara Barat, Indonesia. <br /><br />
                 I love to create stunning UI design and I like to do design exploration to improve my design skills. You can check my design on <a class="link" href="https://dribbble.com/DhiraDanuarta" target="_blank">Dribbble</a> or
                 <a class="link" href="https://instagram.com/ui.dhira" target="_blank">Instagram</a> <br />
                 <br />
@@ -255,7 +255,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="work-box">
-                <a href="https://dribbble.com/shots/17657798-Petto-Pet-Adoption-Center-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-1.jpg" alt="" class="img-fluid" />
                   </div>
@@ -277,7 +277,7 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="https://dribbble.com/shots/18081287-Crafts-Design-Agency-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="assets/img/work-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-2.png" alt="" class="img-fluid" />
                   </div>
@@ -299,7 +299,7 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="https://dribbble.com/shots/17828614-Furnitr-Furniture-Landing-Page" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
                     <img src="assets/img/work-3.jpg" alt="" class="img-fluid" />
                   </div>
